--- a/GP2BaseCode/GameApplication/GameApplication.vcxproj.filters
+++ b/GP2BaseCode/GameApplication/GameApplication.vcxproj.filters
@@ -17,4 +17,9 @@
   <ItemGroup>
     <None Include="ReadMe.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="H:\GameApplication.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
