--- a/GP2BaseCode/Lab1/Lab1.vcxproj
+++ b/GP2BaseCode/Lab1/Lab1.vcxproj
@@ -77,6 +77,9 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GameApplication\GameApplication.vcxproj">
+      <Project>{dc8217ce-63c7-48b9-97cf-0b6f353648c3}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Window\Window.vcxproj">
       <Project>{db0e915c-43b1-49a3-a126-3551bf087ffe}</Project>
     </ProjectReference>
