--- a/GP2BaseCode/GameApplication/GameApplication.vcxproj
+++ b/GP2BaseCode/GameApplication/GameApplication.vcxproj
@@ -72,15 +72,15 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="H:\GameApplication.h" />
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="GameApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Window\Window.vcxproj">
       <Project>{db0e915c-43b1-49a3-a126-3551bf087ffe}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GameApplication.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
