--- a/GP2BaseCode/D3D10Renderer/D3D10Renderer.vcxproj.filters
+++ b/GP2BaseCode/D3D10Renderer/D3D10Renderer.vcxproj.filters
@@ -18,8 +18,13 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Renderer.h">
+    <ClInclude Include="D3D10Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="D3D10Renderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
