--- a/GP2BaseCode/GameApplication/GameApplication.vcxproj
+++ b/GP2BaseCode/GameApplication/GameApplication.vcxproj
@@ -78,6 +78,9 @@
     <ClInclude Include="GameApplication.h" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\D3D10Renderer\D3D10Renderer.vcxproj">
+      <Project>{04ac46b9-7c7c-4c8f-9a28-11e3b31a7a22}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Window\Window.vcxproj">
       <Project>{db0e915c-43b1-49a3-a126-3551bf087ffe}</Project>
     </ProjectReference>
